SERVER-81978 handle StorageUnavailableExceptions in repl::applyCommand_inlock()